Fixed winning game issue and added a class for level generation as well as added comments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".PlayActivity"/>
         <activity android:name=".PauseActivity"/>
         <service android:name=".BackgroundMusicService"/>
+        <activity android:name=".CompletedLevelActivity"/>
     </application>
 
 </manifest>
