--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".HelpActivity"/>
         <activity android:name=".PlayActivity"/>
         <activity android:name=".PauseActivity"/>
+        <activity android:name=".SettingsActivity"/>
         <service android:name=".BackgroundMusicService"/>
         <activity android:name=".CompletedLevelActivity"/>
     </application>
